# lyrebird

./: .gitignore  CHANGELOG.md  README.md  app.py  install.sh  lyrebird.spec  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  rpm.yaml
app/core/: audio.py  config.py  launch.py  lock.py  presets.py  resources.py  state.py  version.py
app/ui/: alert.py  mainwindow.py  preset_editor.py
ci/: build-deb.sh  build-rpm.sh
tests/: test_audio.py  test_config.py  test_presets.py
